# swift-fsmlib

./: .gitignore  .swiftlint.yml  Package.resolved  Package.swift  README.md  metadata.json
.github/workflows/: ci-linux-debug-22_04.yml  ci-linux-debug.yml  ci-linux-release-22_04.yml  ci-linux-release.yml  ci-linux.yml  ci-macOS-debug.yml  ci-macOS-release.yml  ci-macOS.yml  ci-macOS13-debug.yml  ci-macOS13-release.yml  cov.yml  docs.yml  swiftlint.yml
Sources/FSM/: Arrangement+Serialisation.swift  Arrangement.swift  ArrangementWrapper.swift  Boilerplate.swift  CBinding+ArrangementCode.swift  CBinding+Code.swift  CBinding.swift  CBoilerplate+Serialisation.swift  CBoilerplate.swift  CodeBuilder.swift  Dictionary+Utiliities.swift  DirectoryWrapper.swift  Error.swift  FSM.swift  FileManager+Utilities.swift  FileWrapper.swift  Format.swift  Formats.swift  Instance.swift  LLFSM.swift  LanguageBinding.swift  Layout+PList.swift  Layout.swift  Machine+Serialisation.swift  Machine.swift  MachineWrapper.swift  ObjCPPBinding+ArrangementCode.swift  ObjCPPBinding+Code.swift  ObjCPPBinding.swift  OutputLanguage.swift  Path.swift  PropertyList.swift  RegexUtils.swift  State.swift  (+9 more)
examples/CounterC.machine/: CMakeLists.txt  Layout.plist  Machine_CounterC.c  Machine_CounterC.h  State_CountUp.c  State_CountUp.h  State_Initial.c  State_Initial.h  State_InitialPseudoState.c  State_InitialPseudoState.h  State_Initial_OnEntry.mm  State_Print.c  State_Print.h  State_Print_OnEntry.mm  State_SUSPENDED.c  State_SUSPENDED.h  State_SUSPENDED_OnEntry.mm  project.cmake
index/: index.json
(+801 files in other folders)
